Fixed layout so it works better on mobile

--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -49,8 +49,6 @@
 }
 
 .skillImageContainer:hover {
-    width: 130px;
-    height: 130px;
     background-color: var(--color-primary);
 }
 
@@ -73,8 +71,8 @@
 
 .historyItem {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     gap: 17px;
     background: #19376d;
     background: linear-gradient(90deg, #19376d 0%, rgba(25, 55, 109, 0) 100%);
@@ -82,8 +80,20 @@
     padding: 24px;
 }
 
+.companyItem {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 17px;
+}
+
 .historyItem img {
     width: 75px;
+}
+
+.textContainer {
+    display: flex;
+    flex-direction: column;
 }
 
 .historyItemDetails {
@@ -100,12 +110,16 @@
     font-weight: 300;
 }
 
-.historyItemDetails ul {
+.textContainer li {
+    margin-left: 0;
+    padding-left: 0;
     margin-top: 6px;
     list-style-position: inside;
     font-size: 25px;
     list-style-type: disc;
-    margin-left: 17px;
+    margin-left: 0; /* Resets the left margin */
+    padding-left: 0; /* Resets the left padding */
+    list-style-position: inside; /* Adjusts the bullet points */
 }
 
 @media screen and (max-width: 1200px) {
@@ -124,5 +138,14 @@
     .history {
         width: 100%;
         gap: 9px;
+    }
+
+    .container {
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .title {
+        text-align: center;
     }
 }
