--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -50,6 +50,7 @@
 
 .heroImg {
     width: 50%;
+    height: auto;
     z-index: 1;
     padding: 50px;
 
