--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -11,6 +11,8 @@
 }
 
 .image {
+    width: 100%;
+    height: auto;
     margin-bottom: 26px;
     border-radius: 10px;
 }
